# pulse

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  CLOUD_DEPLOYMENT.md  Dockerfile  Dockerfile.local  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase8_settings_and_trends.py  0003_cloud_runtime_state.py
backend/app/: api.py  auth.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  groq.py
backend/app/enrichment/: __init__.py  embedder.py  groq_client.py  parser.py  prompt_builder.py  quota_manager.py  worker.py
backend/app/ingestion/: __init__.py  arxiv.py  base.py  github_trending.py  gmail.py  rss.py  runner.py
backend/app/models/: __init__.py  article.py  digest.py  groq_quota.py  ingestion_run.py  preference.py  quiz.py  trend.py  user_settings.py
backend/scripts/: check_phase1.py  check_phase2.py  check_phase3.py  check_phase4.py  check_phase5.py  check_phase6.py  check_phase7.py  check_phase8.py  gmail_auth_setup.py  migrate_local_data.py
backend/supabase/: config.toml  configure_cloud_cron.sql
backend/tests/: test_api_phase4.py  test_api_phase5.py  test_api_phase6.py  test_api_phase7.py  test_api_phase8.py  test_cloud_runtime.py  test_database_ingestion.py  test_embedder.py  test_enrichment_schema_parser.py  test_enrichment_worker.py  test_gmail_auth_setup.py  test_gmail_ingestion.py  test_live_ingestors.py  test_quota_manager.py  test_utils.py
mobile/: .env.example  (+6 more)
(+85 files in other folders)
