[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-backend"
version = "0.1.0"
description = "Pulse ingestion and API backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29,<1",
    "beautifulsoup4>=4.12,<5",
    "fastapi>=0.115,<1",
    "feedparser>=6.0,<7",
    "google-api-python-client>=2.0,<3",
    "google-auth-httplib2>=0.2,<1",
    "google-auth-oauthlib>=1.2,<2",
    "groq>=0.30,<1",
    "httpx>=0.27,<1",
    "langchain-groq>=1.1,<2",
    "langgraph>=1.2,<2",
    "pgvector>=0.3,<1",
    "pydantic-settings>=2.3,<3",
    "python-dateutil>=2.9,<3",
    "python-dotenv>=1.0,<2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "tenacity>=9.0,<10",
    "tzdata>=2026.1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
]
local-embeddings = [
    "sentence-transformers>=5.0,<6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: requires the PostgreSQL container",
    "live: calls an external source",
]
testpaths = ["tests"]
